<?xml version="1.0"?>
<package format="3">
  <name>ros2_diff_drive_robot</name>
  <version>0.0.1</version>
  <description>Custom differential drive robot demo for ROS 2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
